--- a/stories/button.css
+++ b/stories/button.css
@@ -7,23 +7,32 @@
   display: inline-block;
   line-height: 1;
 }
+
 .storybook-button--primary {
-  color: white;
-  background-color: #1ea7fd;
+  color: var(--colors-neutral-00);
+  background-color: var(--colors-primary-base);
 }
+
 .storybook-button--secondary {
-  color: #333;
-  background-color: transparent;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+  color: var(--colors-neutral-00);
+  background-color: var(--colors-secondary-base);
 }
+
+.storybook-button--tertiary {
+  color: var(--colors-neutral-100);
+  background-color: var(--colors-tertiary-base);
+}
+
 .storybook-button--small {
   font-size: 12px;
   padding: 10px 16px;
 }
+
 .storybook-button--medium {
   font-size: 14px;
   padding: 11px 20px;
 }
+
 .storybook-button--large {
   font-size: 16px;
   padding: 12px 24px;
